--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "README.md", title: About}
- 
+  - {file: "index.html", title: Home}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:pps3@sfu.ca"}
   - {title: Github, icon: github, url: "https://pijushpratim.github.io"}
