--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ show_sidebar: false     # show a sidebar instead of the usual header
 minimal: false             # use a dark header
 
 # Menu
-
-navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: Home}
-external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:pps3@sfu.ca"}
-  - {title: Github, icon: github, url: "https://pijushpratim.github.io"}
+file: "index.html"
+#navigation:           # accepts {file, title, url, icon, sidebaricon}
+  #- {file: "index.html", title: Home}
+#external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
+  #- {title: Mail, icon: envelope, url: "mailto:pps3@sfu.ca"}
+  #- {title: Github, icon: github, url: "https://pijushpratim.github.io"}
   
 
 comments:
