--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ show_sidebar: false     # show a sidebar instead of the usual header
 minimal: false             # use a dark header
 
 # Menu
-file: "index.html"
+file: "README.md"
 #navigation:           # accepts {file, title, url, icon, sidebaricon}
   #- {file: "index.html", title: Home}
 #external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
