--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ show_sidebar: false     # show a sidebar instead of the usual header
 minimal: false             # use a dark header
 
 # Menu
-file: "README.md"
-#navigation:           # accepts {file, title, url, icon, sidebaricon}
-  #- {file: "index.html", title: Home}
+
+navigation:           # accepts {file, title, url, icon, sidebaricon}
+  - {file: "README.md"}
 #external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   #- {title: Mail, icon: envelope, url: "mailto:pps3@sfu.ca"}
   #- {title: Github, icon: github, url: "https://pijushpratim.github.io"}
